<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qualityfull.reactivexandroidbyexamples.ui.validationforms.ValidationFormsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/full_name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="text"
                android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/full_name_text_input_layout"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_text_input_layout"
            android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/label_date_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_text_input_layout"
            android:text="@string/date_birth_label" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/date_birth_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_date_birth"
            android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/date_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_birth"
            android:inputType="date"
            android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/label_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_birth_text_input_layout"
            android:text="@string/phone_label" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_phone"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:theme="@style/MyEditText" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_text_input_layout"
            android:enabled="true"
            android:text="@string/register"
            android:textAllCaps="true"
            android:theme="@style/registerButton" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
